<resources>
    <string name="app_name">data storage</string>

    <string name="text_view">NOTES</string>
    <string name="write_editText">write</string>
    <string name="bt_write">write</string>
    <string name="bt_delete">delete</string>
    <string name="bt_read">read</string>
    <string name="bt_edit">edit</string>

    <string name="menu_activity">menu Activity</string>
    <string name="cache_activity">CacheActivity</string>
    <string name="externalPrivateActivity">ExternalPrivateActivity</string>
    <string name="externalPublicActivity">ExternalPublicActivity</string>

</resources>
